--- a/V1/ProAgil-App/package.json
+++ b/V1/ProAgil-App/package.json
@@ -21,6 +21,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.0",
+    "bootswatch": "^5.1.0",
     "ngx-bootstrap": "^7.0.0",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
