--- a/V1_Original/ProAgil.WebAPI/appsettings.Development.json
+++ b/V1_Original/ProAgil.WebAPI/appsettings.Development.json
@@ -3,8 +3,8 @@
     "Token" : "Super Secret Key"
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=127.0.0.1,1433;Database=ProAgil;User Id=SA;Password=YourPassword123"
-  },
+    "DefaultConnection": "Data Source=ProAgil.db"
+  }, 
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
